# learning_c

./: .gitignore  CMakeLists.txt  README.md
bits/: CMakeLists.txt
bits/src/: CMakeLists.txt  bits.c
chapter1/: CMakeLists.txt
chapter1/include/: blanks.h  celcius.h  ch1utils.h  fahrenheit.h  histogram.h  strs.h  utils.h
chapter1/src/: bits.c  blanks.c  celcius.c  ch1utils.c  eof.c  ex1-1.c  ex1-10.c  ex1-12.c  ex1-13.c  ex1-14.c  ex1-15.c  ex1-16.c  ex1-17.c  ex1-18.c  ex1-19.c  ex1-2.c  ex1-20.c  ex1-21.c  ex1-22.c  ex1-23.c  ex1-24.c  ex1-3.c  ex1-4.c  ex1-5.c  ex1-6.c  ex1-7.c  ex1-8.c  ex1-9.c  ex1.c  ex10.c  ex11.md  ex12.c  ex13.c  ex14.c  ex15.c  ex16.c  ex17.c  ex18.c  ex19.c  ex2.c  (+17 more)
chapter2/: CMakeLists.txt
chapter2/src/: ex1.c  ex2-1.c  ex2-10.c  ex2-2.c  ex2-3.c  ex2-4.c  ex2-5.c  ex2-6.c  ex2-7.c  ex2-8.c  ex2-9.c  ex2.c  ex3.c
chapter3/: CMakeLists.txt
chapter3/src/: ex3-1.c  ex3-2.c  ex3-3.c  ex3-4.c  ex3-5.c  ex3-6.c
chapter4/: CMakeLists.txt
chapter4/src/: ex4-1.c  ex4-2.c  ex4-3.c  ex4-4.c  ex4-5.c  ex4-6.c  ex4-7.c  ex4-8.c  ex4-9.c
fahrenheit/: CMakeLists.txt
fahrenheit/src/: CMakeLists.txt  fahrenheit.c
hello_world/: CMakeLists.txt  autobuild
hello_world/src/: CMakeLists.txt  hello.c
histogram/: CMakeLists.txt
histogram/src/: CMakeLists.txt  histogram.c
input_output/: CMakeLists.txt
input_output/include/: blanks.h  eof.h  input_output.h
input_output/src/: CMakeLists.txt  blanks.c  char_count.c  char_read.c  eof.c  eof_val.c  line_count.c  max_line.c
temperatures/: CMakeLists.txt
temperatures/include/: celcius.h  fahrenheit.h  temperatures.h
temperatures/src/: CMakeLists.txt  celcius.c  fahrenheit.c
test/: CMakeLists.txt
test/src/: test.c  test_blanks.c  test_eof.c  test_histogram.c  test_strs.c  test_temperatures.c
utils/: CMakeLists.txt
utils/include/: ch1utils.h  ch2utils.h  ch3utils.h  ch4utils.h
utils/src/: ch1utils.c  ch2utils.c  ch3utils.c  ch4utils.c
