file(GLOB SOURCES src/ex*.c)

foreach(ELEMENT ${SOURCES})
    get_filename_component(FILENAME ${ELEMENT} NAME_WE)
    add_executable(ch1${FILENAME} ${ELEMENT})
endforeach()

target_link_libraries(ch1ex9 ch1utils)
target_link_libraries(ch1ex12 ch1utils)
target_link_libraries(ch1ex13 ch1utils)
target_link_libraries(ch1ex14 ch1utils)
target_link_libraries(ch1ex16 ch1utils)
target_link_libraries(ch1ex18 ch1utils)
target_link_libraries(ch1ex19 ch1utils)
target_link_libraries(ch1ex22 ch1utils)
