file(GLOB SOURCES src/ex*.c)

foreach(ELEMENT ${SOURCES})
    get_filename_component(FILENAME ${ELEMENT} NAME_WE)
    add_executable(${FILENAME} ${ELEMENT})
endforeach()

target_link_libraries(ex1-9 ch1utils)
target_link_libraries(ex1-12 ch1utils)
target_link_libraries(ex1-13 ch1utils)
target_link_libraries(ex1-14 ch1utils)
target_link_libraries(ex1-16 ch1utils)
target_link_libraries(ex1-18 ch1utils)
target_link_libraries(ex1-19 ch1utils)
target_link_libraries(ex1-22 ch1utils)
